--- a/style.css
+++ b/style.css
@@ -1,10 +1,7 @@
-body{
-    background-color: #000082;
-}
-h1 {
-    color: white;
-    text-align: center;
-    font-family:monospace;
-    font-size: 8em;
-    margin-top: 2em;
+canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
