--- a/style.css
+++ b/style.css
@@ -1,7 +1,26 @@
+
+html, body {
+    height: 100vh;
+}
+
 canvas {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: -10;
+    opacity: 0.3;
+}
+.info{
+    /* margin: 3em; */
+    font-size: 3em;
+    color: blue;
+    font-family: monospace;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    /* border: 10px solid blue; */
 }
